--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DSCPESURR">
-        <activity android:name=".UsersDisplayActivity"></activity>
+        <activity android:name=".UsersDisplayActivity"/>
         <activity android:name=".AddEventActivity" />
         <activity android:name=".DashboardActivity" />
         <activity
